--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ nav ul li a {
     color: var(--ecriture-bleu-p); 
     width: 80%;  
 }
-.conteanire-nos-propos {
+.container-nos-propos {
     width: 80%;
     display: flex;
     margin: auto;
@@ -137,7 +137,7 @@ nav ul li a {
     margin-top: 40px;
 
 }
-.conteanire-nos-propos .left {
+.container-nos-propos .left {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -146,17 +146,17 @@ nav ul li a {
 #nos-propos h1 {
     margin-bottom: 7px;
 }
-.conteanire-nos-propos .left p {
+.container-nos-propos .left p {
     font-size: 23px;
     color: var(--ecriture-bleu-p);
 }
-.conteanire-nos-propos .right  {
+.container-nos-propos .right  {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.conteanire-nos-propos .right img {
-    width: 500px;
+.container-nos-propos .right img {
+    width: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -177,18 +177,16 @@ nav ul li a {
     border: 1px solid var(--gris-bg) ;
     box-shadow: 0px 0.1px var(--gris-bg);
     gap: 10px;
-    margin: auto;
-    width: 1000px;
-    
+    margin: auto;    
 }
 .client-avis .img-client {
     margin-left: 2%;
 }
 .client-avis .avis p {
-    font: 14px;
+    font-size: 14px;
     color: var(--ecriture-bleu-p);
     margin-top: 9%;
-    width: 98%;
+    width: 92%;
 
 }
 .client-avis .avis  h3 {
@@ -203,7 +201,6 @@ nav ul li a {
     margin-top: -5px;
 }
 .container-formulaire {
-    /* margin-top: 200px; */
     width: 85%;
     display: flex;
     justify-content: center;
@@ -341,11 +338,16 @@ ul.li{
     list-style: none;
     line-height: 2;
 }
-@media screen and (min-width:700px) and (max-width:991px){
+.toggle-menu {
+    display: none;
+}
+@media screen   and (max-width:991px){
    body {
    overflow-x: hidden;
    }
-     
+   nav ul{
+    display: none;
+   }
      .container-services {
         gap: 30px;
        
@@ -359,21 +361,20 @@ ul.li{
      .cadre-service p {
         font-size: 15px;
      }
-     .conteanire-nos-propos {
+     .container-nos-propos {
         display: flex;
         flex-direction: column;
      }
-     .conteanire-nos-propos P {
+     .container-nos-propos P {
         width: 500px;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 200px;
-        /* background-color: rgb(240, 235, 235); */
         box-shadow: 1px 1px 1px 0px rgb(228, 224, 224) ;
         font-size: 40px;
      }
-     .conteanire-nos-propos .right img {
+     .contenair-nos-propos .right img {
         width: 400px;
         filter: brightness(80%);
         box-shadow: 10px 10px var(--ecriture-bleu-p), -10px  -10px var(--ecriture-bleu-p);
@@ -394,4 +395,275 @@ ul.li{
         align-items: center;
         gap: 20px;
      }
-}
+     .toggle-menu {
+        display: flex;
+        height: 40px;
+        width: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        cursor: pointer;
+    }
+    .toggle-menu::before {
+        position: absolute;
+        content: "";
+        height: 3px;
+        width: 28px;
+        background-color:  white;
+        border-radius: 6px;
+        box-shadow: 0 10px 0  white;
+        transform: translateY(-10px);
+        transition: 0.5s;
+     }
+     .toggle-menu.active::before {
+        transform: translateY(0) rotate(135deg); 
+        box-shadow: 0 0 0 #0d0e0d;   
+     }   
+     .toggle-menu::after { 
+        position: absolute;
+        content: "";
+        height: 3px;
+        width: 28px;
+        background-color: white;
+        border-radius: 6px;
+        transform: translateY(10px);
+     }
+     .toggle-menu.active::after {
+        transform: translateY(0) rotate(-135deg); 
+        box-shadow: 0 0 0  var(--primarybg);
+     }   
+     header .menu.responsive {
+        display: flex;
+        position: absolute;
+        top: 28px;
+        width: 60%;
+        display: flex;
+        align-items: center;
+        background-color: #38586ce0;
+        box-shadow: 0 0 10px var(--primarybg);
+        flex-direction:column;
+        right: 0;
+        height: 50%;
+        line-height: 2;
+     }
+     header .menu.responsive li {
+        margin: 25px O;
+    }  
+   
+    }
+     @media only screen and (max-width: 767px) {
+       
+        nav ul {
+           display: none;
+        }
+        header .container div img{
+            width: 40px;   
+        }
+        
+        #accueil {
+            background-size: cover;
+            height: auto;
+            padding: 14px;
+            text-align: center;
+        }
+        
+        .heros h1 {
+            font-size: 25px;
+        }
+        
+        .heros p {
+            font-size: 20px;
+        }
+        
+        #accueil .heros button {
+            font-size: 24px;
+            padding: 8px 25px;
+            font-size: 18px;
+        }
+        .container-services {
+            flex-direction: column;
+            gap: 20px;
+        }
+        .titre-principal {
+            font-size: 30px;
+        }
+        .cadre-service {
+            width: 250px;
+            height: auto;
+            padding: 20px;
+        }
+        .cadre-service img  {
+            width: 100px;
+
+        }
+        
+        .cadre-service h1 {
+            font-size: 15px;
+            text-align: center;
+            
+            
+        }
+        
+        .cadre-service p {
+            font-size: 15px;
+            width: 100%;
+        }
+        
+        .container-nos-propos{
+            flex-direction: column;
+            gap: 20px;
+        }
+        .container-nos-propos .left {
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            height: 200px;
+
+        }
+        .container-nos-propos .left p {
+            font-size: 20px;
+           
+        }
+        .conteanire-nos-propos .right img {
+            width: 400px;
+            filter: brightness(80%);
+            box-shadow: 10px 10px var(--ecriture-bleu-p), -10px  -10px var(--ecriture-bleu-p);
+        
+        }
+        .container-nos-client {
+            flex-direction: column;
+            gap: 20px;
+        }
+        
+        .client-avis {
+            width: 400px;
+        }
+        
+        .container-formulaire {
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
+        
+        .container-formulaire .left {
+            width: 100%;
+        }
+        
+        .container-formulaire .left form {
+            width: 100%;
+        }
+        
+        .nom-prenom {
+            flex-direction: column;
+            gap: 10px;
+        }
+        
+        input {
+            width: 100%;
+            padding: 10px;
+        }
+        
+        textarea#message {
+            width: 400px;
+        }
+        
+        .right iframe {
+            width: 500px;
+        }
+        
+        #contenair-contact {
+            text-align: center;
+            padding: 20px;
+        }
+        
+        .contact-disposition {
+            align-items: center;
+        }
+        
+        .contact-disposition img {
+            margin: 0;
+        }
+        
+        .container-list {
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
+        
+        .reseaux-sociaux div {
+            text-align: center;
+        }
+        
+        .reseaux-sociaux img {
+            margin: 0;
+        }
+        
+        .voir-plus a {
+            display:block;
+            margin-bottom: 10px;
+           
+        }
+        .toggle-menu {
+            display: flex;
+            height: 40px;
+            width: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            cursor: pointer;
+        }
+        .toggle-menu::before {
+            position: absolute;
+            content: "";
+            height: 3px;
+            width: 28px;
+            background-color:  white;
+            border-radius: 6px;
+            box-shadow: 0 10px 0  white;
+            transform: translateY(-10px);
+            transition: 0.5s;
+         }
+         .toggle-menu.active::before {
+            transform: translateY(0) rotate(135deg); 
+            box-shadow: 0 0 0 #0d0e0d;   
+         }   
+         .toggle-menu::after { 
+            position: absolute;
+            content: "";
+            height: 3px;
+            width: 28px;
+            background-color: white;
+            border-radius: 6px;
+            transform: translateY(10px);
+         }
+         .toggle-menu.active::after {
+            transform: translateY(0) rotate(-135deg); 
+            box-shadow: 0 0 0  var(--primarybg);
+         }   
+         header .menu.responsive {
+            display: flex;
+            position: absolute;
+            top: 28px;
+            width: 90%;
+            display: flex;
+            align-items: center;
+            background-color: #38586ce0;
+            box-shadow: 0 0 10px var(--primarybg);
+            flex-direction:column;
+            right: 0;
+            height: 40%;
+            line-height: 2;
+         }
+         header .menu.responsive li {
+            margin: 25px O;
+        } 
+        .container-div{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        } 
+       
+    }
+    
